// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be presented as one of the allowed variants 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  background-color: #4b286d;
  color: #fff;
}

.c0:hover {
  box-shadow: 0 0 0 1px;
  background-color: #fff;
  color: #4b286d;
}

.c1 {
  width: 100%;
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;

exports[`Button renders 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  background-color: #2B8000;
  color: #fff;
}

.c0:hover {
  box-shadow: 0 0 0 1px;
  background-color: #fff;
  color: #2B8000;
}

.c1 {
  width: 100%;
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;
